--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             <img src="img/gif2.gif" alt="" title="foto-ptoyecto2">
             <p>proyecto 2 <i class="bi bi-filetype-html"></i> <i class="bi bi-filetype-css"></i></p>
         </a>
+
+        <a href="https://axelnoguera.github.io/landingPageCultivos/" target="_blank" class="proyecto" tabindex="20" aria-label="link de acceso al proyecto numero 3" id="proyecto3">
+            <img src="img/gif3.gif" alt="" title="foto-ptoyecto3">
+            <p>proyecto 3 <i class="bi bi-filetype-html"></i> <i class="bi bi-filetype-css"></i></p>
+        </a>
     </article>
     <script src="script.js"></script>
 </body>
