--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="img/icono-css.png" alt="icono de css"> 
                         <img src="img/icono-javascript.png" alt="icono de javascript">
                     </div>
-                    <p class="informacion-proyecto__texto" tabindex="14">juego de teclas hecho con animaciones de css y setTimeout de javascript</p>
+                    <p class="informacion-proyecto__texto" tabindex="14">Juego de teclas hecho con animaciones de css y setTimeout de Javascript.</p>
                     <a href="https://axelnoguera.github.io/animacion-de-teclas/" target="_blank" class="informacion-proyecto__boton" tabindex="15">ver</a>
                 </div>
 
@@ -85,7 +85,7 @@
                         <img src="img/icono-css.png" alt="icono de css"> 
                         <img src="img/icono-php.png" alt="icono de php">
                     </div>
-                    <p class="informacion-proyecto__texto" tabindex="17">landing page sobre cultivos hecho con html, css y php para el envio del formulario</p>
+                    <p class="informacion-proyecto__texto" tabindex="17">Landing page sobre cultivos hecha con html, css y php para el envío del formulario.</p>
                     <a href="https://axelnoguera.github.io/landing-page-cultivos-2/" target="_blank" class="informacion-proyecto__boton" tabindex="18">ver</a>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <img src="img/icono-html.png" alt="icono de html"> 
                         <img src="img/icono-css.png" alt="icono de css">
                     </div>
-                    <p class="informacion-proyecto__texto" tabindex="20">sitio web de inmobiliaria hecho con html y css (incompleto, falta backend)</p>
+                    <p class="informacion-proyecto__texto" tabindex="20">Sitio web de inmobiliaria hecho con html y css (incompleto, falta backend).</p>
                     <a href="https://axelnoguera.github.io/sitio-web-inmobiliaria/" target="_blank" class="informacion-proyecto__boton" tabindex="21">ver</a>
                 </div>
             </div>         
@@ -116,7 +116,7 @@
 
             <div class="proyectos__caja-proyectos">
                 <div class="caja-proyectos__contenedor-img">
-                    <img src="img/video.gif" alt="trabajo uno" class="contenedor-img__img"> <p class="caja-proyectos__texto lazo" tabindex="23">sitio web para negocio</p>
+                    <img src="img/video.gif" alt="trabajo uno" class="contenedor-img__img"> <p class="caja-proyectos__texto lazo" tabindex="23">sitio web para fabrica</p>
                 </div>
 
                 <div class="caja-proyectos__informacion-proyecto">
@@ -126,7 +126,7 @@
                         <img src="img/icono-javascript.png" alt="icono de javascript">
                         <img src="img/icono-php.png" alt="icono de php">
                     </div>
-                    <p class="informacion-proyecto__texto" tabindex="24">sitio web para fabrica de empaques, diseño hecho con html y css, usa javascript para agregar dinamismo a las imagenes y php para el envio del formulario, cuando lo subi a la web me encontre con problemas de carga que solucione comprimiento las imagenes y usando lazyloading, esto hizo que el sitio web pase de cargar en <span class="rojo">50s</span> a cargar en tan solo en <span class="amarillo">4s</span></p>
+                    <p class="informacion-proyecto__texto" tabindex="24">Sitio web para fábrica de empaques, diseño hecho con html y css, usa Javascript para agregar dinamismo a las imágenes y php para el envío del formulario. Cuando lo subí a la web, me encontré con problemas de carga que solucioné comprimiendo las imágenes y usando lazy loading. Esto hizo que el sitio web pasara de cargar en <span class="rojo">50s</span> a cargar en tan solo <span class="amarillo">4s</span>.</p>
                     <a href="https://www.inrom.mx/" target="_blank" class="informacion-proyecto__boton" tabindex="25">ver</a>
                 </div>
             </div> 
