--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-        <section class="conocimientos">
+        <section class="conocimientos" aria-colcount="conocimientos">
             <p class="conocimientos__titulo" tabindex="3">Conocimientos</p>
 
             <div class="conocimientos__caja-conocimientos">
@@ -91,7 +91,7 @@
             </div>
 
 
-            <div class="proyectos__caja-proyectos">
+            <div class="proyectos__caja-proyectos" class="proyectos">
                 <div class="caja-proyectos__contenedor-img">
                     <img src="img/gif3.gif" alt="proyecto tres" class="contenedor-img__img"> <p class="caja-proyectos__texto lazo" tabindex="19">Landing page cultivos</p>
                 </div>
