--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <img src="img/icono-html.png" alt="icono de html"> 
                         <img src="img/icono-css.png" alt="icono de css">
                     </div>
-                    <p class="informacion-proyecto__texto" tabindex="20">Sitio web de inmobiliaria hecho con html y css (incompleto, falta backend).</p>
+                    <p class="informacion-proyecto__texto" tabindex="20">Sitio web de inmobiliaria con login hecho con html, css, javascript, php y mysql (no tiene ninguna verificación de seguridad ante ataques, ya que aún es un proyecto incompleto).</p>
                     <a href="https://axelnoguera.github.io/sitio-web-inmobiliaria/" target="_blank" class="informacion-proyecto__boton" tabindex="21">ver</a>
                 </div>
             </div>         
