--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
     <link rel="shortcut icon" href="img/portafolio.png" type="image/png">
+    <meta name="description" content="programador web full stack con conocimientos en tecnologias como html, css, javascript, php y mysql">
+    <meta name="keywords" content="programador,desarrollador,web,full stack,javascript,php,mysql">
+    <meta name="author" content="axel noguera">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portafolio</title>
