--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                 <p class="caja-conocimientos__saber" tabindex="11">Básico</p>
             </div>
 
+
+            <div class="conocimientos__caja-conocimientos">
+                <img src="img/Icono-mysql.png" alt="icono de mysql" class="caja-conocimientos__img">
+                <strong class="caja-conocimientos__nombre" tabindex="">MySql</strong>
+                <p class="caja-conocimientos__saber" tabindex="">Básico</p>
+            </div>
+
         </section>
 
 
