--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <footer class="footer">
             <a href="mailto:axelprogramacion123@gmail.com" class="footer__link" tabindex="26" aria-label="link de acceso a mail"><img src="img/mail.png" alt="icono de mail" class="link__img"><p class="link__texto">mail</p></a>
             <a href="https://www.instagram.com/nogue.axel/" target="_blank" class="footer__link" tabindex="27" aria-label="link de acceso a instagram"><img src="img/instagram.png" alt="icono de instagram" class="link__img"><p class="link__texto">instagram</p></a>
-            <a href="https://github.com/axelnoguera" target="_blank" class="footer__link" tabindex="28" aria-label="link de acceso a github"><img src="img/github.png" alt="icono de github" class="link__img" tabindex="29" aria-label="fin del sitio web"><p class="link__texto">github</p></a>
+            <a href="https://www.workana.com/freelancer/780f46543ea41855cdb8d72f53550ab6?utm_source=share-profile&utm_medium=email&utm_campaign=share-2025-05-05" target="_blank" class="footer__link" tabindex="28" aria-label="link de acceso a workana"><img src="img/workana.png" alt="icono de workana" class="link__img" tabindex="29" aria-label="fin del sitio web"><p class="link__texto">workana</p></a>
         </footer>
     </main>
 </body>
